# documind

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.dashboard  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: eval_ci.yml
monitoring/: prometheus.yml
monitoring/grafana/: dashboard.json  grafana.ini
scripts/: build_golden_set.py  ci_eval.py  generate_arch_diagram.py  run_eval.py
src/api/: cost_tracker.py  main.py
src/dashboard/: app.py
src/evaluation/: __init__.py  golden_set_builder.py  ragas_runner.py  reporter.py
src/ingestion/: loader.py  vectorstore.py
src/retrieval/: __init__.py  base.py  bm25_retrieval.py  hybrid.py  hyde.py  naive.py  reranker.py
tests/: golden_qa.json
tests/fixtures/: sample.txt
